Force replace jnlua_v2.2 as jnlua_v3.